# rust-in-action

./: .gitignore  README.md
ch1/cereal/src/: main.rs
ch1/fruit/src/: main.rs
ch1/hello2/src/: main.rs
ch1/letters/src/: main.rs
ch1/penguins/src/: main.rs
ch1/race/src/: main.rs
ch10/busythreads-broken/src/: main.rs
ch10/channels-complex/: Cargo.toml
ch10/channels-intro/: Cargo.toml
ch10/render-hex/: Cargo.toml
ch10/render-hex-functional/: Cargo.toml
ch10/render-hex-parallel-iterator/: Cargo.toml
ch10/render-hex-threadpool/: Cargo.toml
ch2/: 3arrays.rs  add-floats.rs  add-with-lifetimes.rs  bufread-lines.rs  first-steps.rs  intro-to-numbers.rs  introducing-vec.rs  match-needles.rs  needle-in-heystack.rs  non-base2.rs  read-file.rs  simple-with-enumerate.rs  simple-with-linuenums.rs  str-simple-pattern.rs  while-true-incr-count.rs  with-regex.rs
ch2/grep-lite/: Cargo.toml
ch2/ok/: ok.rs
ch3/: defining-files-neatly.rs  file-doced.rs  file-states.rs  implementing-display.rs  mock-file.rs  new-type-pattern.rs  not-quite-file-2.rs  not-quite-file.rs  parse-log.rs  skeleton-read-trait.rs
ch4/: check-sats-1.rs  check-sats-2.rs  check-sats-3.rs  check-sats-clone-and-cope-traits.rs  rc-groundstation.rs  rc-refcell-groundstation.rs  sat-mailbox.rs  short-lived-strategy.rs
ch5/: bit-patterns.rs  endianness.rs  f32-as-u32.rs  impossible-addition.rs  int-vs-int.rs  to-oblivion.rs  u8-to-mock-rand.rs  visualizing-f32.rs
ch5/cpu4/: Cargo.toml
ch6/: alloc.plot  pointer-intro.rs
ch6/heap-via-box/: Cargo.toml
ch6/meminfo-win/: Cargo.toml
ch6/memscan-2/: Cargo.toml
ch6/particles/: alloc.tsv
ch7/actionkv/: Cargo.toml
ch7/actionkv1/: Cargo.toml
ch7/actionkv2/: Cargo.toml
ch7/actionkv2/src/: akv_disk.rs  akv_mem.rs  lib.rs
ch7/pacific-json/: Cargo.toml
ch7/serde-eg/: Cargo.toml
ch8/mget/: Cargo.toml
ch8/mget/src/: dns.rs  ethernet.rs  http.rs  main.rs
ch8/misc/: io-error.rs  multierror.rs  traiterror.rs  wraperror.rs  wraperror2.rs
ch8/resolve/: Cargo.toml
ch8/simple/: Cargo.toml
ch9/clock/: Cargo.toml
ch9/clock0/: Cargo.toml
ch9/clock3/: Cargo.toml
ch9/clock3/src/: main.rs
(+35 files in other folders)
