[package]
name = "actionkv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
crc = "3.0.1"
serde = { version = "1.0.164", features = ["derive"] }

[lib]
path = "src/lib.rs"
name = "libactionkv"

[[bin]]
path = "src/akv_mem.rs"
name = "akv_mem"

[[bin]]
path = "src/akv_disk.rs"
name = "akv_disk"
