[package]
name = "mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rand = "0.8.5"
smoltcp = { version = "0.10.0", features = ["proto-igmp", "proto-ipv4", "verbose", "log"] }
trust-dns-client = { version = "0.22.0", default-features = false }
url = "2.4.0"
